WikimediaUI theme: Replace fixed spacing values with vars
Replacing fixed spacing (`margin`/`padding`) values with vars
and aligining them to unified base font-size.

Bug: T136790

--- a/src/themes/wikimediaui/common.less
+++ b/src/themes/wikimediaui/common.less
@@ -95,9 +95,12 @@
 @margin-search: 12 / @ooui-font-size-browser / @ooui-font-size-base;
 @margin-taboption: @margin-dialog-bar-button-framed;
 @margin-button-close: 4 / @ooui-font-size-browser / @ooui-font-size-base;
+@margin-top-form-fieldset: 24 / @ooui-font-size-browser / @ooui-font-size-base;
+@margin-top-fieldlayout: 16 / @ooui-font-size-browser / @ooui-font-size-base;
+@margin-top-fieldlayout--labelled: 12 / @ooui-font-size-browser / @ooui-font-size-base;
+@margin-top-fieldlayout-help: -( 2 / @ooui-font-size-browser / @ooui-font-size-base );
 @margin-top-tagitem: 4 / @ooui-font-size-browser / @ooui-font-size-base;
 @margin-top-tagmultiselect-input: 6 / @ooui-font-size-browser / @ooui-font-size-base;
-@margin-top-fieldlayout-help: -( 2 / @ooui-font-size-browser / @ooui-font-size-base );
 @margin-bottom-fieldset-header: unit( 8 / @ooui-font-size-browser / ( @ooui-font-size-base * @font-size-fieldset-header ), @ooui-unit );
 @margin-end-fieldlayout-help: -( 8 / @ooui-font-size-browser / @ooui-font-size-base );
 
@@ -126,7 +129,8 @@
 @padding-input-text: @padding-top-base @padding-horizontal-input-text @padding-bottom-base;
 @padding-menu: @padding-top-menu @padding-horizontal-base @padding-bottom-menu;
 @padding-menu-large: @padding-top-tool-label @padding-horizontal-base @padding-bottom-tool-label;
-@padding-search: 16 / @ooui-font-size-browser / @ooui-font-size-base; // equals `1.25em`≈`16px`
+@padding-panel-form: 16 / @ooui-font-size-browser / @ooui-font-size-base; // equals `1.1428571em`≈`16px`
+@padding-panel-dialog: 20 / @ooui-font-size-browser / @ooui-font-size-base;
 @padding-taboption: @padding-top-base @padding-horizontal-taboption @padding-bottom-base;
 @padding-horizontal-base: 12 / @ooui-font-size-browser / @ooui-font-size-base; // equals `0.9375em`≈`12px`
 @padding-horizontal-frameless: 2 / @ooui-font-size-browser / @ooui-font-size-base; // equals `0.28571429em`≈`4px`
